--- a/Substantial Development Assignment/pom.xml
+++ b/Substantial Development Assignment/pom.xml
@@ -49,6 +49,13 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-multipart-provider</artifactId>
+			<version>2.1-beta-1</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>net.sf.ehcache</groupId>
 			<artifactId>ehcache-core</artifactId>
 			<version>2.5.2</version>
